<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.MainActivity" android:background="@color/defaultBackGroundColor">


    <Button
            android:text="@string/sign_in_btn_text"
            android:layout_width="124dp"
            android:layout_height="48dp"
            android:id="@+id/signInButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/greeting_tv"
            android:textSize="18sp" android:textStyle="bold"
            android:textColor="@android:color/white" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            style="@style/Widget.AppCompat.Button" android:background="#009688" android:alpha=".9"
            app:layout_constraintStart_toStartOf="@+id/greeting_tv" app:layout_constraintHorizontal_bias="0.15"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/greeting_tv"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:textColorLink="#03A9F4"/>
    <Button
            android:text="@string/sign_up_btn_text"
            android:layout_width="124dp"
            android:layout_height="48dp"
            android:id="@+id/signUpButton" app:layout_constraintEnd_toEndOf="@+id/greeting_tv"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/greeting_tv"
            android:textSize="18sp" android:textStyle="bold"
            android:textColor="@android:color/white" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            style="@style/Widget.AppCompat.Button" android:background="#009688" android:alpha=".9"
            app:layout_constraintHorizontal_bias="0.84"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/greeting_tv"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/greeting_text"
            android:layout_width="317dp"
            android:layout_height="221dp"
            android:id="@+id/greeting_tv"
            android:contentDescription="@string/greeting_text_cd"
            android:keepScreenOn="false" android:keyboardNavigationCluster="false" android:freezesText="false"
            android:gravity="center"
            android:textDirection="firstStrong" android:textColor="@android:color/white" android:textStyle="bold"
            android:forceDarkAllowed="true" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="36sp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>