<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/defaultBackGroundColor">

    <EditText
            android:layout_width="309dp"
            android:layout_height="44dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/signUpNameEt"
            android:textColor="@android:color/white" android:hint="@string/sign_up_name_et_hint"
            android:textColorHighlight="@color/textHintsColor" android:textColorHint="#65FFFFFF"
            android:autofillHints="name"
            android:textColorLink="@color/textHintsColor"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="216dp"
            app:layout_constraintTop_toTopOf="parent">
    </EditText>
    <EditText
            android:layout_width="309dp"
            android:layout_height="44dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/signUpLastNameEt"
            android:textColor="@android:color/white" android:hint="@string/sign_up_last_name_et_hint"
            android:textColorHighlight="@color/textHintsColor" android:textColorHint="#65FFFFFF"
            android:autofillHints="last name"
            android:textColorLink="@color/textHintsColor"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/signUpNameEt" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">
    </EditText>

    <EditText
            android:layout_width="309dp"
            android:layout_height="44dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/signUpEmailEt"
            android:textColor="@android:color/white" android:hint="@string/sign_in_email_hint"
            android:textColorHighlight="@color/textHintsColor" android:textColorHint="#65FFFFFF"
            android:autofillHints="email"
            android:textColorLink="@color/textHintsColor"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/signUpLastNameEt" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">
    </EditText>
    <EditText
            android:layout_width="309dp"
            android:layout_height="44dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/signUpPasswordEt"
            android:textColor="@android:color/white" android:hint="@string/sign_in_password_hint"
            style="@android:style/Widget.Holo.Light.AutoCompleteTextView"
            android:textColorHighlight="@color/textHintsColor" android:textColorHint="@color/textHintsColor"
            android:autofillHints="password" android:textColorLink="@color/textHintsColor"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/signUpEmailEt" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/sign_up_btn_text"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:id="@+id/signUpButton"
            android:textSize="18sp" android:textStyle="bold"
            android:textColor="@android:color/white" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            style="@style/Widget.AppCompat.Button" android:background="#009688" android:alpha=".9"
            android:textColorLink="#03A9F4"
            app:layout_constraintTop_toBottomOf="@+id/signUpPasswordEt" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="100dp"
            app:layout_constraintHorizontal_bias="0.823" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.09"/>
    <TextView
            android:text="@string/sign_in_btn_text"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:id="@+id/signInLink" android:textColor="#FFFFFF"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/signUpButton" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/signUpButton"
            app:layout_constraintTop_toTopOf="@+id/signUpButton"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="153dp"
            android:layout_height="116dp"
            android:id="@+id/progressBar" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/signUpEmailEt" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>