<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:background="@color/defaultBackGroundColor">

    <EditText
            android:layout_width="309dp"
            android:layout_height="44dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/sign_in_email_et"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_password_et" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.908"
            android:textColor="@android:color/white" android:hint="@string/sign_in_email_hint"
            android:textColorHighlight="@color/textHintsColor" android:textColorHint="#65FFFFFF"
            android:autofillHints="email"
            android:textColorLink="@color/textHintsColor">
    </EditText>

    <EditText
            android:layout_width="309dp"
            android:layout_height="44dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/sign_in_password_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/white" android:hint="@string/sign_in_password_hint"
            style="@android:style/Widget.Holo.Light.AutoCompleteTextView"
            android:textColorHighlight="@color/textHintsColor" android:textColorHint="@color/textHintsColor"
            android:autofillHints="password" android:textColorLink="@color/textHintsColor"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/sign_in_btn_text"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:id="@+id/sing_in_button"
            android:textSize="18sp" android:textStyle="bold"
            android:textColor="@android:color/white" android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            style="@style/Widget.AppCompat.Button" android:background="#009688" android:alpha=".9"
            android:textColorLink="#03A9F4"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="@+id/sign_in_password_et"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/sign_in_password_et"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.229"/>
    <TextView
            android:text="@string/sign_up_btn_text"
            android:layout_width="115dp"
            android:layout_height="50dp"
            android:id="@+id/sign_up_link" android:textColor="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/sing_in_button" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_password_et" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.252" android:gravity="center"/>
    <ImageView
            android:layout_width="19dp"
            android:layout_height="31dp" app:srcCompat="?attr/actionModeCloseDrawable"
            android:id="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/sign_up_link"
            app:layout_constraintTop_toTopOf="@+id/sign_up_link"
            app:layout_constraintBottom_toBottomOf="@+id/sign_up_link" android:foregroundTint="#00D40000"
            app:layout_constraintVertical_bias="0.533" app:layout_constraintStart_toEndOf="@+id/sign_up_link"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.809"
            android:forceDarkAllowed="true" android:tint="#00009688"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="153dp"
            android:layout_height="116dp"
            android:id="@+id/progressBar" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_email_et" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>
    <TextView
            android:layout_width="235dp"
            android:layout_height="20dp"
            android:id="@+id/errorMessageContainer"
            app:layout_constraintBottom_toTopOf="@+id/sign_in_email_et" android:textColor="#E91E63"
            app:layout_constraintStart_toStartOf="@+id/sign_in_email_et"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_email_et" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.888" app:layout_constraintEnd_toEndOf="@+id/sign_in_email_et"
            android:layout_marginBottom="8dp"
    />

</androidx.constraintlayout.widget.ConstraintLayout>